1.1.0b3; Improved Mac button readability; FIXES #125: References filled instead of referenced values when the entry is in "non-selected" database;

--- a/Firefox addon/KeeFox/chrome/skin/keefox.css
+++ b/Firefox addon/KeeFox/chrome/skin/keefox.css
@@ -126,4 +126,5 @@ toolbar[iconsize="small"] toolbarbutton.login-found
   margin-right: 5px !important;
   height: 32px !important;
   min-height: 32px !important;
+  color:#000;
 }
